# testing-cubes

./: Cargo.toml
src/: constants.rs  lib.rs  main.rs
src/components/: chunk.rs  player.rs  voxel.rs
src/resources/: assets.rs  world.rs
src/systems/: player.rs  rendering.rs  setup.rs  world.rs
src/utils/: mesh.rs  terrain.rs
