[package]
name = "testing-cubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "testing_cubes"
path = "src/lib.rs"

[[bin]]
name = "testing-cubes"
path = "src/main.rs"

[dependencies]
bevy = "0.13.0"
noise = "0.8.2"
futures-lite = "2.2.0"